--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ross Edwards MSci"
   avatar           : "profile.png"
-  bio              : ""
+  bio              : "Durham University - Physics & Biology"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
