--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ross-edwards-2008821ba/"
+  linkedin         : "ross-edwards-2008821ba"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
