--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
-    url: /cv/
+    url: /CV/
+
+  - title: "Replicated Papers"
+    url: /Replicated_Papers/    
+
+  - title: "Portfolio"
+    url: /Portfolio/    
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "About Me"
+    url: /About_Me/
+        
+  - #title: "Blog Posts"
+    #url: /year-archive/
+    
+  - #title: "CV"
+    #url: /cv/
+    
+  - #title: "Guide"
+    #url: /markdown/
