--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /portfolio/   
 
   - title: "Replicated Papers"
-    url: /Replicated_Papers/    
+    url: /replicated_papers/    
 
   - title: "About Me"
     url: /about_me/
