--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Replicated Papers"
     url: /replicated_papers/    
 
-  - title: "About Me"
-    url: /about_me/
+  - title: "Additional Interests"
+    url: /additional_interests/
         
   - #title: "Blog Posts"
     #url: /year-archive/
