--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /files/RZEdward_Resume.pdf
+    url: /files/Ross_Edwards_Resume.pdf
 
   - title: "Portfolio"
     url: /portfolio/   
