--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ross Edwards MSci"
-  avatar           : "profile.png"
+  avatar           : "Custom_Profile.png"
   bio              : "Machine Learning Engineer"
   location         : "London, UK"
   employer         : "Kubrick Group"
