--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Additional Interests"
     url: /additional_interests/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - #title: "Blog Posts"
+    #url: /year-archive/
     
   - #title: "CV"
     #url: /cv/
