--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /files/Ross_Edwards_Resume.pdf
 
   - title: "Portfolio"
-    url: /portfolio/   
+    url: /project_portfolio/   
 
   - title: "Academic Research"
     url: /academic_research/    
