--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "CV"
-    url: /files/Ross_Edwards_CV.pdf
+    url: /files/Ross-Edwards-CV.pdf
 
   - title: "Portfolio"
     url: /project_portfolio/   
