--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Custom_Profile.jpg"
   bio              : "Data Engineer | ML"
   location         : "London, UK"
-  employer         : "Kubrick Group"
+  employer         : #"Kubrick Group"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : "ross@edwardsnetwork.com"
