--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ross Edwards MSci"
   avatar           : "Custom_Profile.jpg"
-  bio              : "Data Engineer | ML"
+  bio              : "Data Science | ML"
   location         : "London, UK"
   employer         : #"Kubrick Group"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
