--- a/.github/workflows/jekyll_build.yml
+++ b/.github/workflows/jekyll_build.yml
@@ -3,7 +3,7 @@ name: Build and deploy Jekyll site to GitHub Pages
 on:
   push:
     branches:
-      - main  # Set a branch to deploy
+      - master  # Set a branch to deploy
 
 jobs:
   build:
