--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ross Edwards MSci"
-  avatar           : "Custom_Profile.jpg"
+  avatar           : "My_Profile_Pic.jpg"
   bio              : "Data Science | ML"
   location         : "London, UK"
   employer         : #"Kubrick Group"
